--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-react",
   "version": "1.0.0",
   "scripts": {
-    "start": "\"node ./src/server.js\" \"cd consulta_url && npm start\"",
+    "start": "npm run dev",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
     "client": "cd consulta_url && npm start",
     "server": "node index.js",
